# labor_system_ai_test

./: .env.example  .gitignore  README.md  SYNC.md  docker-compose.dev.yml  docker-compose.yml  first_meeting_plan.md  plan2026-02-26.md  process.md  project_proposal.md  todolist.csv
.github/workflows/: ci-baseline.yml
ai-dev-workflow/: README.md  agent-routing.md  multi-agent-protocol.md  workflow-main.md
ai-dev-workflow/adapters/: README.md  antigravity-workflow.md  claude-instructions.md  codex-prompt.md  crewai-instructions.md
ai-dev-workflow/config/: .env.example  development.env.example  maintenance.env.example  models.yaml
ai-dev-workflow/crewai/: .env.example  README.md  pyproject.toml
ai-dev-workflow/crewai/src/labor_workflow_crew/: __init__.py  context.py  crew.py  main.py
ai-dev-workflow/crewai/src/labor_workflow_crew/config/: agents.yaml  tasks.yaml
ai-dev-workflow/diagrams/: README.md  agent-architecture.mmd  boot-protocol.mmd  degradation-chain.mmd  parallel-timeline.mmd  phase-execution-detail.mmd  workflow-overview.mmd
ai-dev-workflow/orchestrator/: __init__.py  agents.py  (+6 more)
backend/: Dockerfile  pom.xml
comparison/: multi-agent-vs-main-summary.md  quality-baseline-main.md  quality-exp-ph01-ph02.md
database/: init.sql
docs/: ai-collaboration-playbook.md  api-contracts.md  architecture.md  calicat-inputs.md  database-schema.md  deployment.md  phase-plan.md  specification.md  tech-stack.md  test-strategy.md
frontend/: Dockerfile  README.md  nginx.conf  package.json
memory/: 2026-02-26.md  2026-02-27.md  2026-03-01.md  2026-03-03.md
(+352 files in other folders)
